2005-08-18  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmflexiserver.c: Fix reading of configuration
	  file so it works.

2005-08-18  Frederic Crozat  <fcrozat@mandriva.com>

	* config/locale.alias: Remove spaces in locale name,
	it causes gdm to discard those locales. No string
	freeze was broken, these strings are not displayed.
	Fix bug #313735.

2005-08-17  Rodrigo Moya <rodrigo@novell.com>

	* gui/greeter/greeter_system.c (greeter_system_handler): added
	missing tooltips.

2005-08-16  Brian Cameron  <brian.cameron@sun.com>

	* README: Add info about the gdm-list@gnome.org and
	  location of archives.

2005-08-15  Brian Cameron  <brian.cameron@sun.com>

	* gui/Makefile.am:  Change installation location of
	  gdmphotosetup.desktop from /usr/share/gnome/capplets
	  to /usr/share/applications since the older directory
	  is deprecated since GNOME 2.10 and is not menu-spec
	  compliant.  Fixes bug #313205.
	* docs/C/gdm.xml: Updated Face Browser docs to better
          explain how things work now that bug #310906 has been
          fixed, and to clarify that the Face Browser can be
	  used with the Themed Greeter.

2005-08-15  Brian Cameron  <brian.cameron@sun.com>

	* README.install, config/gdm.conf.in, docs/C/gdm.xml:
	  Updated links to point to the new
	  http://www.gnome.org/projects/gdm/ for the
	  project page.  Updated Commands section of the
	  docs so they look better.  Fixed art.gnome.org
	  link.
	* gui/gdmflexiserver.c: Fix bug #313197.
	* gui/gdm.conf.in: Added docs to better explain how
	  AlwaysRestartServer works.

2005-08-12  Brian Cameron  <brian.cameron@sun.com>

	* AUTHORS: Updated.

2005-08-11  Brian Cameron  <brian.cameron@sun.com>

	* NEWS: updated to be a bit more clear.
	* daemon/gdm.[ch], daemon/slave.c, daemon/verify-pam.c:
	  Now support Solaris SDTLOGIN mechanism which will
	  cause the Xserver to be started as the user instead
	  of as root for extra security.
	* gui/gdmflexiserver.c: Add a new option --startnew