@@ -1,3 +1,9 @@
+2005-08-20  Brian Cameron  <brian.cameron@sun.com>
+
+	* daemon/gdm.c, daemon/slave.c: Honor Default Session
+	  gdm.conf setting when using autologin.  Fixes bug
+	  #313996.  Patch by HansPetter Jansson <hpj@novell.com>
+
 2005-08-18  Brian Cameron  <brian.cameron@sun.com>
 
 	* gui/gdmflexiserver.c: Fix reading of configuration
